# xfep-ws

./: .gitignore  README.md  pyproject.toml
src/xfep/ws/: __init__.py  auth.py  config.py  models.py  rest.py  soap.py
tests/: conftest.py  test_config.py  test_rest.py  test_soap.py
