[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xfep-ws"
version = "0.1.0"
description = "Cliente SOAP/REST para los servicios web de SUNAT (SEE y GRE)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Jhonatan Mosquera Tabra", email = "jhonatanmt83@gmail.com"},
]
maintainers = [
    {name = "Jhonatan Mosquera Tabra", email = "jhonatanmt83@gmail.com"},
]
keywords = ["sunat", "facturacion-electronica", "peru", "soap", "see", "gre", "webservice", "httpx", "async", "cpe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: Spanish",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/Xpertik/xfep-ws"
Repository = "https://github.com/Xpertik/xfep-ws"
Issues = "https://github.com/Xpertik/xfep-ws/issues"
Documentation = "https://github.com/Xpertik/xfep-ws#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/xfep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
